--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ input, select {
   background-image: url(../img2/eyecatch.jpg);
   background-position:center;
   background-size: cover;
-  height: 1000px;
+  width: 100%;
+  height: calc(100vh - 50px);
   position: relative;
 }
 .home h1{
@@ -166,7 +167,6 @@ input, select {
     color: white;
     position: relative;
     height: 500px;
-    padding: 0 0 0 250px;
 }
 .about img{
     position: absolute;
@@ -175,16 +175,21 @@ input, select {
     left: 60%;
     top: 30%;
 }
-.about h1{
-    font-size: 27px;
-    padding: 150px 0 20px 0;
-}
-.about p{
+.text-wrap{
     position: absolute;
-    width: 55%;
+    top: 40%;
+    left: 30%;
+}
+.text-wrap h1{
+    font-size: 27px;
+    margin-bottom: 20px;
+}
+.text-wrap p{
+    width: 70%;
+    height: 100px;
     line-height: 23px;
 }
-.about a{
+.text-wrap a{
     width: 110px;
     height: 21px;
     background-color: white;
@@ -192,8 +197,7 @@ input, select {
     color: black;
     padding: 10px 20px;
     text-decoration: none;
-    position: absolute;
-    top: 60%;
+    margin-right: 0;
 }
 .service{
     height: 1500px;
@@ -216,7 +220,7 @@ input, select {
 .service-card1{
     position: absolute;
     top: 130px;
-    left: 230px;
+    right: 40%;
     width: 470px;
     height: 180px;
     background-color: white;
@@ -322,7 +326,7 @@ input, select {
     font-size: 15px;
 }
 .FAQ{
-    margin: 159px 230px;
+    margin: 159px auto;
     background-color: black;
     color: white;
     width: 1000px;
